[WKWebView _updateScrollViewBackground] churns UI-and-CGColors while repainting https://bugs.webkit.org/show_bug.cgi?id=132793 <rdar://problem/16877870>

Reviewed by Dan Bernstein.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _updateScrollViewBackground]):
Don't bypass the cache and make a copy of the CGColor just to set its alpha.
Cache the last color and don't bother creating a UIColor nor updating the
color on our views if it hasn't changed.

* WebCore.exp.in:
Export a Color convenience function.


Canonical link: https://commits.webkit.org/150839@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168594 268f45cc-cd09-0410-ab3c-d52691b4dbfc